# firstpublic

./: .gitignore  404.html  LICENSE  first.py  index.html  mkdocs.yml  pyproject.toml
docs/: index.md
search/: search_index.json
